[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "hashbeam"
version = "0.1.0"
authors = [
  { name="0E9B061F", email="0E9B061F@protonmail.com" },
]
description = "Get a public link for a local image, uploading only as necessary"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0E9B061F/hashbeam"
"Bug Tracker" = "https://github.com/0E9B061F/hashbeam/issues"
