[tool.poetry]
name = "hashbeam"
version = "0.3.1"
description = "Get a public link for a local image, uploading only as necessary"
authors = ["0E9B061F <0E9B061F@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
requests = "^2.28.1"
xdg = "^5.1.1"

[tool.poetry.scripts]
hashbeam = 'hashbeam.hashbeam:execute'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
